Fix bg video on ios

--- a/src/style.css
+++ b/src/style.css
@@ -708,6 +708,7 @@ body {
         width: 100%;
         height: auto;
         pointer-events: none;
+        user-select: none;
     }
   }
 
